# Stoiridh.Controls

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  stoiridh-controls.qbs
doc/: Makefile  doc.qbs  make.bat  stoiridh-controls.qdocconf
doc/source/: api-cpp.rst  api-qml.rst  api.rst  conf.py  index.rst
doc/source/templates/: control.rst  padding.rst
doc/src/: stoiridhcontrols-index.qdoc  stoiridhcontrols.qdoc  stoiridhcontrolstemplates-cpp.qdoc
modelling/: modelling.qbs
modelling/Stoiridh.Controls.Templates/Activities/: StyleFactory.qmodel
modelling/Stoiridh.Controls.Templates/Classes/: Style.qmodel
src/: CMakeLists.txt  plugin.cpp  plugin.hpp  src.qbs
src/controls/: CMakeLists.txt  controls.qbs  plugin.cpp  plugin.hpp
src/controls/qml/: qmldir
src/imports/: CMakeLists.txt  imports.qbs
src/imports/qml/: qmldir
src/qml/: qmldir
src/templates/: CMakeLists.txt  control.cpp  control.hpp  global.hpp  padding.cpp  padding.hpp  templates.qbs
src/templates/api/internal/: abstractcontrol.hpp  global.hpp
src/templates/api/internal/style/: abstractstyledispatcher.cpp  abstractstyledispatcher.hpp  style.cpp  style.hpp  styledispatcher.cpp  styledispatcher.hpp  stylefactory.cpp  stylefactory.hpp  stylefactory.inl  stylepropertychanges.cpp  stylepropertychanges.hpp  stylepropertychangesparser.cpp  stylepropertychangesparser.hpp  stylepropertyexpression.cpp  stylepropertyexpression.hpp  stylestate.cpp  stylestate.hpp  stylestatecontroller.cpp  stylestatecontroller.hpp  stylestateoperation.cpp  stylestateoperation.hpp
src/templates/api/internal/style/utility/: stylefactoryhelper.cpp  stylefactoryhelper.hpp
src/templates/api/private/: control_p.hpp
src/templates/api/private/bootstrap/: qmlextensionplugin.cpp  qmlextensionplugin_p.hpp
src/templates/api/private/style/: style_p.hpp  stylepropertychanges_p.hpp  stylestate_p.hpp
src/templates/api/public/: Control  Padding  global.hpp
src/templates/api/public/Core/Exception/: Exception  ExceptionHandler  NullPointerException
src/templates/core/exception/: exception.cpp  exception.hpp  exceptionhandler.hpp  exceptionhandler.inl  nullpointerexception.cpp  nullpointerexception.hpp
tests/: CMakeLists.txt  tests.qbs
tests/auto/: CMakeLists.txt  auto.qbs
tests/auto/controls/: CMakeLists.txt  controls.qbs  tst_stoiridh_controls.cpp
tests/auto/templates/: CMakeLists.txt  templates.qbs
tests/auto/templates/control/: CMakeLists.txt  tst_sct_control.cpp
tests/auto/templates/internal/: CMakeLists.txt  internal.qbs
tests/auto/templates/internal/style/: CMakeLists.txt  style.qbs
tests/auto/templates/internal/style/abstractstyledispatcher/: CMakeLists.txt  abstractstyledispatcher.qbs  tst_sct_abstractstyledispatcher.cpp
tests/auto/templates/internal/style/stylepropertychanges/: CMakeLists.txt  stylepropertychanges.qbs  tst_sct_stylepropertychanges.cpp
tests/auto/templates/internal/style/stylepropertyexpression/: CMakeLists.txt  stylepropertyexpression.qbs  tst_sct_stylepropertyexpression.cpp
tests/auto/templates/internal/style/stylestatecontroller/: CMakeLists.txt  stylestatecontroller.qbs  tst_sct_stylestatecontroller.cpp
tests/auto/templates/internal/style/stylestateoperation/: CMakeLists.txt  stylestateoperation.qbs  tst_sct_stylestateoperation.cpp
tests/auto/templates/padding/: CMakeLists.txt  tst_sct_padding.cpp
tests/auto/templates/public/: CMakeLists.txt  public.qbs
tests/auto/templates/public/control/: CMakeLists.txt  control.qbs  tst_sct_control.cpp
tests/auto/templates/public/core/: CMakeLists.txt  core.qbs
tests/auto/templates/public/core/exception/: CMakeLists.txt  exception.qbs
tests/auto/templates/public/core/exception/exception/: CMakeLists.txt  exception.qbs  tst_sct_exception.cpp
tests/auto/templates/public/core/exception/exceptionhandler/: CMakeLists.txt  exceptionhandler.qbs  tst_sct_exceptionhandler.cpp
tests/auto/templates/public/core/exception/nullpointerexception/: CMakeLists.txt  nullpointerexception.qbs  tst_sct_nullpointerexception.cpp
tests/auto/templates/public/padding/: CMakeLists.txt  padding.qbs  tst_sct_padding.cpp
